syntax = "proto3";

package documentprocessor;

service DocumentProcessorService {
  rpc generate (stream GenerateRequest) returns (stream GenerateResponse);
  rpc analyze (AnalyzeRequest) returns (AnalyzeResponse);
}

message GenerateRequest {
  bytes file = 1;
  repeated PlaceholderData data = 3;
}

message PlaceholderData {
  string id = 1;
  string key = 2;
  string type = 3;
  string value = 4;
  double width = 5;
  double height = 6;
}

message MapValue {
  repeated string layerDataUrls = 1;
}

message GenerateResponse {
  bytes file = 1;
}


message AnalyzeRequest {
  bytes file = 1;
}

message AnalyzeResponse {
  repeated PlaceholderMetadata placeholders = 1;
}

message PlaceholderMetadata {
  string key = 1;
  string type = 2;
  double width = 3;
  double height = 4;
}
